# lichtkrant

./: .gitignore  LICENSE  README.md  claude.md  pyproject.toml
config/: config.yaml.example
docs/: Lichtkrant 2.docx  openapi.yaml
src/lichtkrant/: __init__.py  config.py  dispatcher.py  main.py  templating.py
src/lichtkrant/db/: __init__.py  models.py  repository.py
src/lichtkrant/protocol/: __init__.py  builder.py  constants.py  decoder.py
src/lichtkrant/spi/: __init__.py  driver.py  spy.py
src/lichtkrant/web/: __init__.py  app.py
src/lichtkrant/web/templates/: base.html  dashboard.html  index.html  queue.html  texts.html  welcome.html
src/lichtkrant/wifi/: __init__.py  access_point.py  qr.py
tests/: __init__.py  test_captive_portal.py  test_config.py  test_decoder.py  test_dispatcher.py  test_protocol.py  test_repository.py  test_spy_driver.py  test_templating.py  test_web_api.py
