[project]
name = "lichtkrant"
version = "0.1.0"
description = "Raspberry Pi controller for LED scrolling display"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "qrcode[pil]>=7.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
hw = [
    "spidev>=3.6",
    "rpi-lgpio>=0.6",
]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
lichtkrant = "lichtkrant.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lichtkrant"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
